--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="bower_components/lodash/lodash.min.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="bower_components/ui-router/release/angular-ui-router.min.js"></script>
+    <script src="bower_components/jStorage/jstorage.min.js"></script>
 
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
